--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "watch": "nodemon server.js"
+    "watch": "nodemon"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,7 @@
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
-    "graphql": "^15.5.0",
+    "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10"
   },
