--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "googlebooks-app",
+  "name": "Book-Search-Engine",
   "version": "1.0.0",
-  "description": "",
+  "description": "main directory:\r npx create-react-app clients",
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ManoLo2ManoLo/Book-Search-Engine.git"
   },
   "keywords": [],
   "author": "",
